2005-01-06  Alexander Gottwald  <ago at freedesktop dot org>

	* Imakefile 
	* InitOutput.c 
	* XWin.rc 
	* winerror.c 
	* wintrayicon.c 
	* winvideo.c
	* winshaddd.c       	
	* winwindow.h:
	Set PROJECT_NAME in Imakefile to create alternative window titles 
	for Cygwin/X and Xming
	
2005-01-06  Alexander Gottwald  <ago at freedesktop dot org>

	* winmultiwindowclass.c:
	* winmultiwindowwm.c:
	Fix crash with non-nullterminated strings (reported by Øyvind Harboe)

2004-12-14  Alexander Gottwald  <ago at freedesktop dot org>

	* InitOutput.c:
	* winprocarg.c:
	EnumDisplayMonitors is not available on Window NT4 and 95. Resolve
	the function dynamicly

2004-12-08  Alexander Gottwald  <ago at freedesktop dot org>

	* InitOutput.c:
	* winprocarg.c:
	Added support for placing the main window with the @<monitor#>.
	Patch by Mark Fisher, small changes by Alexander Gottwald
	
2004-12-06  Alexander Gottwald  <ago at freedesktop dot org>

	* XWin.rc:
	include windows.h

2004-12-05  Alexander Gottwald  <ago at freedesktop dot org>

	* ddraw.h:
	redone ddraw.h to be able to mix it with w32api style COM header 
	files. 
	
	* winmultiwindowwm.c:
	* obj_base.h:
	* ddraw.h:
	obj_base.h is not needed anymore. Using <objbase.h> instead.

	* winms.h:
	Use Xwindows.h instead of windows.h

	* winresource.h:
	do not include win_ms.h
	
	* win.h:
	remove extra definition of sleep()

	* InitOutput.c:
	Set HOME to Documents and Settings/username if not set
	
	* winprefs.c:
	Use Xming basedir instead of ProjectRoot for system.XWinrc

	* windialogs.c:
	* winshadgdi.c:
	* winprefs.c:
	Fix callback functions to use wBOOL instead of BOOL

	* winmultiwindowwindow.c:
	* winwin32rootless.c:
	* winwin32rootlesswindow.c:
	* winerror.c:
	Fix compiler warnings. Added debug output.

	* winconfig.c:
	Fix warning about undefined macro max
	
2004-12-04  Earle Philhower

	* InitOutput.c:
	* win.h:
	* wincreatewnd.c:
	* winprocarg.c:
	Optional position -screen parameter (-screen n WxH+X+Y or 